/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    `java-library`
    `maven-publish`
    id("io.freefair.lombok") version "8.6"
    id("org.springframework.boot") version "3.2.5"
    id("io.spring.dependency-management") version "1.1.4"


}

repositories {
    mavenLocal()
    mavenCentral()
//    maven {
//        url = uri("https://repo.maven.apache.org/maven2/")
//    }
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.2.5")
//    implementation("org.springframework.data:spring-data-jpa:3.2.5")
    implementation("org.thymeleaf:thymeleaf:3.1.2.RELEASE")
    implementation("jakarta.persistence:jakarta.persistence-api:3.1.0")
    implementation("org.springframework.boot:spring-boot-starter-thymeleaf:3.2.5")

    implementation("org.springframework.boot:spring-boot-starter-web:3.2.5")
//    implementation("org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.1.2.RELEASE")
    implementation("org.springframework.boot:spring-boot-starter-security:3.2.5")
    implementation("org.springframework.boot:spring-boot-starter-validation:3.2.5")
    implementation("org.springframework.boot:spring-boot-starter-jdbc:3.2.5")

    implementation("javax.validation:validation-api:2.0.1.Final")
    implementation("org.hibernate.validator:hibernate-validator:8.0.1.Final")
    implementation("org.postgresql:postgresql:42.7.3")
    implementation("javax.persistence:javax.persistence-api:2.2")
    implementation("org.hibernate.orm:hibernate-core:6.5.0.Final")
    implementation("org.springframework:spring-tx:6.1.6")

    implementation("org.projectlombok:lombok:1.18.32")
    compileOnly("javax.servlet:javax.servlet-api:4.0.1")

//    api(libs.org.springframework.boot.spring.boot.starter.data.jpa)
//    api(libs.org.springframework.boot.spring.boot.starter.thymeleaf)
//    api(libs.org.springframework.boot.spring.boot.starter.web)
//    api(libs.org.thymeleaf.extras.thymeleaf.extras.springsecurity5)
//    api(libs.org.springframework.boot.spring.boot.starter.security)
//    api(libs.org.springframework.boot.spring.boot.starter.validation)
//    api(libs.org.projectlombok.lombok)
//    api(libs.javax.validation.validation.api)
//    api(libs.org.hibernate.validator.hibernate.validator)
//    runtimeOnly(libs.org.postgresql.postgresql)
//    compileOnly(libs.javax.servlet.javax.servlet.api)

}

group = "com.mkh"
version = "0.0.1-SNAPSHOT"
description = "TutoringPlatform"
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.withType<JavaCompile>() {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc>() {
    options.encoding = "UTF-8"
}
